Added details